Opened 19 years ago

Closed 17 years ago

#551 closed bug (fixed)

Drag icon for current folder (located in the Menu) doesnt change its color.

Reported by: mikael.konradson@… Owned by: axeld
Priority: low Milestone: R1
Component: Applications/Tracker Version:
Keywords: Cc: diver, jonas.kirilla
Blocked By: Blocking:
Platform: All

Description (last modified by axeld)

Steps to reproduce:

  1. Change the Menu color using the menu preflet application.
  2. Restart tracker.
  3. Look at the icon on the right side of the menu, its background isnt not

transparent.

/Mikael Konradsson

Attachments (2)

ContainerWindow.cpp.diff (774 bytes ) - added by jonas.kirilla 18 years ago.
Patch
Error.png (18.0 KB ) - added by jonas.kirilla 18 years ago.
Look at the icon in the top-right corner of Tracker folders.

Download all attachments as: .zip

Change History (9)

comment:1 by diver, 19 years ago

Cc: diver added

comment:2 by korli, 19 years ago

bug_group: developers

comment:3 by axeld, 19 years ago

Component: ApplicationsApplications/Tracker
Description: modified (diff)
Platform: All
Priority: normallow

by jonas.kirilla, 18 years ago

Attachment: ContainerWindow.cpp.diff added

Patch

by jonas.kirilla, 18 years ago

Attachment: Error.png added

Look at the icon in the top-right corner of Tracker folders.

comment:4 by jonas.kirilla, 18 years ago

Cc: jonas.kirilla added

comment:5 by jonas.kirilla, 18 years ago

Fixed in hrev21328.

comment:6 by humdinger, 17 years ago

As Jonas said, this bug is fixed. The ticket can be closed. (Or am I missing something?)

comment:7 by axeld, 17 years ago

Resolution: fixed
Status: newclosed
Note: See TracTickets for help on using tickets.