The menubar icon at the top-right of Tracker folder windows now uses the view color of its parent view. This fixes bug #551.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@21328 a95241bf-73f2-0310-859d-f6bbb57e9c96